# sglf

./: .gitignore  CMakeLists.txt  README.md  compile_gcc_command
cmake/: sglfConfig.cmake.in
include/: camera.hpp  color.hpp  drawable.hpp  font.hpp  game.hpp  graphics.hpp  input.hpp  renderTexture.hpp  sglf.hpp  shader.hpp  sound.hpp  sprite.hpp  text.hpp  texture.hpp  util.hpp  window.hpp
include/sglf/: pch.hpp  sglf.hpp
shader/: bitmask.fs  bitmask.vs  text.fs  text.vs  texture.fs  texture.vs
src/: camera.cpp  drawable.cpp  font.cpp  game.cpp  graphics.cpp  input.cpp  main.cpp  renderTexture.cpp  sglf.cpp  shader.cpp  sound.cpp  sprite.cpp  text.cpp  texture.cpp  util.cpp  window.cpp
src/sglf/: sglf.cpp
src/test/: main.cpp
